<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--UHo 5/24/2020 NEW 7l: title-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <!--UHo 5/24/2020 NEW 8l: room dimension label-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/room_dimension"
        android:textColor="@android:color/background_dark" />
    <!--UHo 5/24/2020 MOD 7l: text view to display how many rolls you need
    text color is red-->
    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="40sp"
        android:text="@string/height"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 MOD 10l: height input,
    change input type to numberDecimal, change Background tint to green-->
    <EditText
        android:id="@+id/wall_height_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignBottom="@id/textView3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40sp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="5"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/zero"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignLeft="@id/textView3"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/width1"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 MOD 10l: room length input
    change input type to numberDecimal, change Background tint to green-->
    <EditText
        android:id="@+id/room_length_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wall_height_input"
        android:layout_alignLeft="@id/wall_height_input"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="5"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_alignLeft="@id/textView3"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/width2"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 MOD 12l:
    change input type to numberDecimal, change Background tint to green-->
    <EditText
        android:id="@+id/width2_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/room_length_input"
        android:layout_alignLeft="@id/wall_height_input"
        android:layout_alignParentRight="false"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="5"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/zero" />
    <!--UHo 5/24/2020 NEW 8l: door dimension label-->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/doors"
        android:textColor="@android:color/background_dark" />
    <!--UHo 5/24/2020 NEW 10l: door height label-->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/Height"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 NEW 9l: door height input-->
    <EditText
        android:id="@+id/door_height_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView8"
        android:layout_alignBottom="@id/textView8"
        android:layout_marginLeft="80sp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="4"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/zero" />
    <!--UHo 5/24/2020 NEW 10l: door width label-->
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_alignLeft="@id/textView8"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/width"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 NEW 10l: door width input-->
    <EditText
        android:id="@+id/door_width_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/door_height_input"
        android:layout_alignRight="@id/door_height_input"
        android:layout_alignBottom="@id/textView9"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="4"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/zero" />
    <!--UHo 5/24/2020 NEW 10l: numbers of door label-->
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_alignLeft="@id/textView8"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/doorNumber"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 MOD 10l: numbers of doors input
     change Background tint to green-->
    <EditText
        android:id="@+id/numbersDoorInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/door_width_input"
        android:layout_alignRight="@id/door_width_input"
        android:layout_alignBottom="@id/textView10"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="4"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/Zero" />
    <!--UHo 5/24/2020 NEW 8l: windows dimension label-->
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView7"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40sp"
        android:text="@string/windows"
        android:textColor="@android:color/black" />
    <!--UHo 5/24/2020 NEW 9l: window height label-->
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView8"
        android:layout_alignParentRight="true"
        android:layout_marginRight="140sp"
        android:text="@string/Height"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 NEW 10l: window height input-->
    <EditText
        android:id="@+id/window_height_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView12"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="80sp"
        android:layout_marginRight="20sp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="4"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/zero" />
    <!--UHo 5/24/2020 NEW 8l: window width label-->
    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView12"
        android:layout_alignBottom="@id/textView9"
        android:text="@string/width"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 NEW 8l: window width input-->
    <EditText
        android:id="@+id/window_width_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/window_height_input"
        android:layout_alignBottom="@id/textView13"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="4"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/zero" />
    <!--UHo 5/24/2020 NEW 8l: numbers of windows label-->
    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView13"
        android:layout_alignBottom="@id/textView10"
        android:text="@string/windowNumber"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 MOD 10l: numbers of window input
    change Background tint to green-->
    <EditText
        android:id="@+id/numbersWindowInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/window_width_input"
        android:layout_alignBottom="@id/textView14"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="4"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/Zero" />
    <!--UHo 5/24/2020 NEW 10l: select pattern repeat label -->
    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numbersWindowInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top"
        android:gravity="center"
        android:text="@string/patterRepeat"
        android:textColor="@android:color/black" />
    <!--UHo 5/24/2020 NEW 40l: radio group for pattern repeat-->
    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView15"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100sp"
        android:background="@color/light_blue"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern1"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern2"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern3"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern4"
            android:textColor="@android:color/black"
            android:textSize="17sp" />
    </RadioGroup>
    <!--UHo 5/24/2020 NEW 8l: compute button, onClick is used
    to activate event handler when this button is clicked-->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RadioGroup"
        android:layout_alignBottom="@id/button2"
        android:layout_marginLeft="60sp"
        android:onClick="compute_wallpaper"
        android:text="@string/compute"
        android:textSize="17sp" />
    <!--UHo 5/24/2020 NEW 8l: help button, onClick is used
    to activate event handler when this button is clicked-->
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RadioGroup"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60sp"
        android:onClick="gotoHelp"
        android:text="@string/help"
        android:textSize="17sp" />

</RelativeLayout>